- Enhance github io template

--- a/public/404.html
+++ b/public/404.html
@@ -1,3 +1,4 @@
 <script>
-    location.replace("/tongmon.github.io" + location.pathname);
+    const path = location.pathname.replace(/\/[^\/]+$/, '/');
+    location.replace(path);
 </script>
