Add assets and logic

--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/game-logo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>React Tic-Tac-Toe</title>
+  <title>tongstar's blog</title>
 </head>
 
 <body>
-  <header>
+  <!-- <header>
     <img src="game-logo.png" alt="Hand-drawn tic tac toe game board" />
     <h1>Tic-Tac-Toe</h1>
-  </header>
+  </header> -->
   <div id="root"></div>
   <script type="module" src="/src/index.jsx"></script>
 </body>
