--- a/404.html
+++ b/404.html
@@ -1,4 +1,11 @@
-<script>
-    const path = location.pathname.replace(/\/[^\/]+$/, '/');
-    location.replace(path);
-</script>
+<!DOCTYPE html>
+<html>
+
+<head>
+    <meta http-equiv="refresh" content="0; URL=/" />
+</head>
+
+<body>
+</body>
+
+</html>
