--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <meta http-equiv="refresh" content="0; URL=/tongstar-blog" />
+    <meta http-equiv="refresh" content="0; URL=/tongstar-blog/" />
 </head>
 
 <body>
