--- a/public/404.html
+++ b/public/404.html
@@ -1,11 +1,3 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-    <meta http-equiv="refresh" content="0; URL=/tongstar-blog/" />
-</head>
-
-<body>
-</body>
-
-</html>
+<script>
+    location.replace("/tongmon.github.io" + location.pathname);
+</script>
