--- a/public/404.html
+++ b/public/404.html
@@ -1,3 +1,12 @@
-<script>
-    location.replace("/tongmon.github.io" + location.pathname);
-</script>
+<!DOCTYPE html>
+<html>
+
+<head>
+    <meta http-equiv="refresh" content="0; url=/tongstar-blog/" />
+</head>
+
+<body>
+    <p>Redirecting to <a href="/tongstar-blog/">/tongstar-blog/</a>...</p>
+</body>
+
+</html>
