--- a/404.html
+++ b/404.html
@@ -2,10 +2,11 @@
 <html>
 
 <head>
-    <meta http-equiv="refresh" content="0; URL=/tongstar-blog/" />
+    <meta http-equiv="refresh" content="0; url=/tongstar-blog/" />
 </head>
 
 <body>
+    <p>Redirecting to <a href="/tongstar-blog/">/tongstar-blog/</a>...</p>
 </body>
 
 </html>
